# rust-snippets

./: README.md
auth/simple-salt/: README.md
auth/simple-salt/src/: server.rs
database/sqlx-postgres/: .env  Cargo.toml  README.md  docker-compose.yml
database/sqlx-postgres/src/: main.rs
encryption/simple-salt/: Cargo.toml  README.md
network/: Cargo.toml
network/src/: client.rs  echo-server.rs
todo-app/actix-diesel/: .env  Cargo.toml  README.md
todo-app/actix-diesel/migrations/2021-03-15-144624_todos/: up.sql
todo-app/actix-diesel/src/: main.rs  models.rs  routes.rs  schema.rs
todo-app/actix-juniper-gql/: .env  Cargo.toml
todo-app/actix-juniper-gql/migrations/: 20210311050946_todos.sql
todo-app/actix-juniper-gql/src/: context.rs  gql_schema.rs  main.rs  model.rs  routes.rs
todo-app/actix-sqlx/: .env  Cargo.toml  README.md  docker-compose.yml
todo-app/actix-sqlx/migrations/: 20210308060751_todo.sql
todo-app/actix-sqlx/src/: main.rs
todo-app/actix-sqlx/src/todo/: mod.rs  model.rs  routes.rs
