[package]
name = "network"
version = "0.1.0"
authors = ["Matsuoka <quantumular@gmail.com>"]
edition = "2018"

[[bin]]
name = "echo-server"
path = "src/echo-server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
