[package]
name = "sqlx-postgres"
version = "0.1.0"
authors = ["Matsuoka <quantumular@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
futures = "0.3"
paw = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
structopt = { version = "0.3", features = ["paw"] }
tokio = { version = "1", features = ["full"] }
