[package]
name = "simple-salt"
version = "0.1.0"
authors = ["Matsuoka <quantumular@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
async-std = { version = "1.8", features = ["attributes"] }
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
tide = "0.16"
