[package]
name = "actix-diesel"
version = "0.1.0"
authors = ["Matsuoka <quantumular@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
