[package]
name = "actix-juniper-gql"
version = "0.1.0"
authors = ["Matsuoka <quantumular@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3"
anyhow = "1.0.38"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.8.3"
juniper = "0.15.3"
juniper_actix = "0.2.3"
sqlx = { version = "0.4", features = ["runtime-actix-rustls", "postgres", "chrono", "time"] }
